# muEmacs-extensions

./: .gitignore  README.md  git_workflow.c  rg_search.c  settings.toml  write_edit.c
ada_fuzzy/: Makefile  README.md  bridge.c  build.py  b~fuzzy.adb  b~fuzzy.ads  b~fuzzy.ali  fuzzy.adb  fuzzy.ads  fuzzy.ali
ai_crystal/: Makefile  ai_completion.cr  bridge.c
c_git/: Makefile  README.md  bridge.c  build.py  git_commands.mod  git_ext.f90  git_workflow.c
c_lint/: Makefile  README.md  lint.c
c_linus/: linus.c
c_minibuffer/: build.py  minibuffer.c
c_mouse/: Makefile  README.md  mouse.c
c_multicursor.archived/: build.py  multicursor.c
c_org/: build.py  org.c
c_write_edit/: README.md  write_edit.c
cobol_csv/: bridge.c  build.py
crystal_ai/: Makefile  README.md  agent.cr  bridge.c  build.py
fuzzy_ada/: Makefile  bridge.c  fuzzy.adb  fuzzy.ads  fuzzy.ali
git_fortran/: Makefile  bridge.c  git_commands.mod
go_chess/: README.md  board.go  book.go  bridge.c  build.py  eval.go  fetch_openings.go  go.mod  go_chess.h  lichess_seed.json  main.go  muemacs_include  render.go  run_games.py  search.go  search_test.go  zobrist.go
go_dfs/: bridge.c  file_traverse.go  generators.go  go_dfs.h  main.go  modes.go  options.go
go_lsp/: README.md  bridge.c  go_lsp.h  lsp.h  main.go
go_sam/: bridge.c  go.mod
go_sudoku/: bridge.c  build.py  go.mod  go_sudoku.h  main.go
haskell_calc/: bridge.c  build.py
rg_search_rs/: Cargo.toml
rg_search_rs/src/: ffi.rs  lib.rs  search.rs
rust_re2/: Cargo.toml  README.md  build.rs
rust_re2/src/: ffi.rs  lib.rs  search.rs
(+75 files in other folders)
