[package]
name = "rust_re2"
version = "2.0.0"
edition = "2021"
description = "RE2-style regex search for μEmacs (Thompson NFA, linear-time)"

[lib]
name = "rust_re2"
crate-type = ["cdylib"]

[dependencies]
# Core grep crates from ripgrep
grep = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
grep-printer = "0.2"

# Directory walking with .gitignore support and parallelism
ignore = "0.4"
walkdir = "2"

# Parallelism
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Utilities
memmap2 = "0.9"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
bstr = "1.7"

[profile.release]
opt-level = 3
lto = true
